Réorganisation du projet

--- a/templates/equipe/index.html.twig
+++ b/templates/equipe/index.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Nom équipe ici
+{% block title %}
+	Nom équipe ici
 {% endblock %}
 
 {% block body %}{% endblock %}
-
-
-
