--- a/templates/follow/index.html.twig
+++ b/templates/follow/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste de followers{% endblock %}
-
-{% block body %}
-
+{% block title %}Liste de followers
 {% endblock %}
+
+{% block body %}{% endblock %}
