--- a/templates/include/sidebar.html.twig
+++ b/templates/include/sidebar.html.twig
@@ -1,71 +1,67 @@
 <div id="sidebar" class="sticky-sidebar">
 	<div class="top-menu">
-		<a class="logo" href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}"
-				alt="Logo victoryforge" /></a>
+		<a class="logo" href="{{ path('app_home') }}"><img src="{{ asset('img/logo.png') }}" alt="Logo victoryforge"/></a>
 		<hr class="logo-underline">
-		<div class="side-menu">
+		<div
+			class="side-menu">
 			{# Faire ça pour appliquer la classe active pour les différents liens #}
-			<a href="{{ path('app_home') }}" {% if app.request.attributes.get('_route')=='app_home' %}
-				class="nav-item-active" {% endif %}>
+			<a href="{{ path('app_home') }}" {% if app.request.attributes.get('_route')=='app_home' %} class="nav-item-active" {% endif %}>
 				<span class="material-symbols-outlined">home</span>
 				Accueil
 			</a>
 			{% if app.user == null %}
-			{# <a href="{{ path('app_login') }}">
-				<span class="material-symbols-outlined">
-					contract_edit
-				</span>
-				Organiser un tournoi
-			</a>
-			<a href="{{ path('app_login') }}">
-				<span class="material-symbols-outlined">
-					add_circle
-				</span>
-				Crée une équipe
-			</a> #}
+				{# <a href="{{ path('app_login') }}">
+								<span class="material-symbols-outlined">
+									contract_edit
+								</span>
+								Organiser un tournoi
+							</a>
+							<a href="{{ path('app_login') }}">
+								<span class="material-symbols-outlined">
+									add_circle
+								</span>
+								Crée une équipe
+							</a> #}
 			{% else %}
-			<a href="{{ path('app_tournoi_new') }}" {% if app.request.attributes.get('_route')=='app_tournoi_new' %}
-				class="nav-item-active" {% endif %}>
-				<span class="material-symbols-outlined">
-					contract_edit
-				</span>
-				Organiser un tournoi
-			</a>
-			<a href="{{ path('new_equipe') }}" {% if app.request.attributes.get('_route')=='new_equipe' %}
-				class="nav-item-active" {% endif %}>
-				<span class="material-symbols-outlined">
-					add_circle
-				</span>
-				Crée une équipe
-			</a>
-			<a href="{{ path('app_search_user') }}" {% if app.request.attributes.get('_route')=='app_search_user' %}
-				class="nav-item-active" {% endif %}>
-				<span class="material-symbols-outlined">
-					search
-				</span>
-				Rechercher un utilisateur
-			</a>
+				<a href="{{ path('app_tournoi_new') }}" {% if app.request.attributes.get('_route')=='app_tournoi_new' %} class="nav-item-active" {% endif %}>
+					<span class="material-symbols-outlined">
+						contract_edit
+					</span>
+					Organiser un tournoi
+				</a>
+				<a href="{{ path('new_equipe') }}" {% if app.request.attributes.get('_route')=='new_equipe' %} class="nav-item-active" {% endif %}>
+					<span class="material-symbols-outlined">
+						add_circle
+					</span>
+					Crée une équipe
+				</a>
+				<a href="{{ path('app_search_user') }}" {% if app.request.attributes.get('_route')=='app_search_user' %} class="nav-item-active" {% endif %}>
+					<span class="material-symbols-outlined">
+						search
+					</span>
+					Rechercher un utilisateur
+				</a>
 			{% endif %}
 			{% if app.user == null %}
-			<a href="{{ path('app_login') }}">
-				<span class="material-symbols-outlined">
-					login
-				</span>
-				Se connecter
-			</a>
-			<a href="{{ path('app_register') }}">
-				<span class="material-symbols-outlined">
-					how_to_reg
-				</span>
-				S'enregistrer
-			</a>
+				<a href="{{ path('app_login') }}">
+					<span class="material-symbols-outlined">
+						login
+					</span>
+					Se connecter
+				</a>
+				<a href="{{ path('app_register') }}">
+					<span class="material-symbols-outlined">
+						how_to_reg
+					</span>
+					S'enregistrer
+				</a>
 			{% else %}
-			<a href="{{ path('app_logout') }}">
-				<span class="material-symbols-outlined">
-					logout
-				</span>
-				Se déconnecter
-			</a>
+				<a href="{{ path('app_logout') }}">
+					<span class="material-symbols-outlined">
+						logout
+					</span>
+					Se déconnecter
+				</a>
 			{% endif %}
 		</div>
 	</div>
