--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,135 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	{% block meta %}
-	{% endblock %}
-	<title>
-		{% block title %}Bienvenue !
-		{% endblock %}
-	</title>
-	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	{% block stylesheets %}
-		<link rel="stylesheet" href="{{ asset('css/style.css') }}" />
-	{% endblock %}
-</head>
-
-<body>
-	<div id="wrapper">
-		<header class="mobile-header">
-			<i class="fa-solid fa-bars"></i>
-			<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="Logo VictoryForge, accueil." />
-		</header>
-		<div class="overlay"></div>
-
-		<main id="main-container">
-			{% block sidebar %}
-				{{ include ('include/sidebar.html.twig') }}
+	<head>
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/> {% block meta %}{% endblock %}
+		<title>
+			{% block title %}Bienvenue !
 			{% endblock %}
+		</title>
+		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
+		{% endblock %}
+	</head>
 
-			<div id="content"> 
-				{% for message in app.flashes('success') %}
-				<div class="alert alert-success">
-					{{ message }}
-				</div>
-				{% endfor %}
+	<body>
+		<div id="wrapper">
+			<header class="mobile-header">
+				<i class="fa-solid fa-bars"></i>
+				<img class="logo-mobile" src="{{ asset('img/logo.png') }}" alt="Logo VictoryForge, accueil."/>
+			</header>
+			<div class="overlay"></div>
 
-				{% for message in app.flashes('error') %}
-				<div class="alert alert-danger">
-					{{ message }}
+			<main id="main-container">
+				{% block sidebar %}
+					{{ include ('include/sidebar.html.twig') }}
+				{% endblock %}
+
+				<div id="content">
+					{% for message in app.flashes('success') %}
+						<div class="alert alert-success">
+							{{ message }}
+						</div>
+					{% endfor %}
+
+					{% for message in app.flashes('error') %}
+						<div class="alert alert-danger">
+							{{ message }}
+						</div>
+					{% endfor %}
 				</div>
-				{% endfor %}
-			</div>
-			{% block body %}{% endblock %}
-		</main>
-	</div>
-	{# <footer>
-		<p>&copy; 2024 VictoryForge, Inc</p>
-		<div class="user-utilities">
-			<a href="{{ path('app_condition') }}">
-				Conditions d'utilisation
-			</a>
-			<a href="{{ path('app_confidentialite') }}">
-				Politique de confidentialité
-			</a>
+				{% block body %}{% endblock %}
+			</main>
 		</div>
-	</footer> #}
+		{# <footer>
+				<p>&copy; 2024 VictoryForge, Inc</p>
+				<div class="user-utilities">
+					<a href="{{ path('app_condition') }}">
+						Conditions d'utilisation
+					</a>
+					<a href="{{ path('app_confidentialite') }}">
+						Politique de confidentialité
+					</a>
+				</div>
+			</footer> #}
 
-	{% block javascripts %}
-	{# {{ encore_entry_script_tags('app') }} #}
-	<script src="{{ asset('js/script.js') }}"></script>
-	{% endblock %}
+		{% block javascripts %}
+			{# {{ encore_entry_script_tags('app') }} #}
+			<script src="{{ asset('js/script.js') }}"></script>
+		{% endblock %}
 		<script>
 			const openSidebar = document.querySelector('.fa-bars');
-			const sidebar = document.querySelector('#sidebar');
-			const overlay = document.querySelector('.overlay');
+const sidebar = document.querySelector('#sidebar');
+const overlay = document.querySelector('.overlay');
 
-			openSidebar.addEventListener('click', () => {
-				sidebar.classList.add('active');
-				overlay.classList.add('active');
-			});
+openSidebar.addEventListener('click', () => {
+sidebar.classList.add('active');
+overlay.classList.add('active');
+});
 
-			overlay.addEventListener('click', () => {
-				sidebar.classList.remove('active');
-				overlay.classList.remove('active');
-			});
+overlay.addEventListener('click', () => {
+sidebar.classList.remove('active');
+overlay.classList.remove('active');
+});
 
-			document.addEventListener('DOMContentLoaded', (event) => {
-                const flashMessages = document.querySelectorAll('.alert');
+document.addEventListener('DOMContentLoaded', (event) => {
+const flashMessages = document.querySelectorAll('.alert');
 
-                flashMessages.forEach((flashMessage) => {
-                    setTimeout(() => {
-                        flashMessage.style.display = 'none';
-                    }, 3000);
-                });
-            });
-	</script>
-	<script src="{{ asset('tarteaucitron/tarteaucitron.js') }}"></script>
-	<script>
-		tarteaucitron.init({
-			"privacyUrl": "", /* Privacy policy url */
-			"bodyPosition": "bottom", /* or top to bring it as first element for accessibility */
+flashMessages.forEach((flashMessage) => {
+setTimeout(() => {
+flashMessage.style.display = 'none';
+}, 3000);
+});
+});
+		</script>
+		<script src="{{ asset('tarteaucitron/tarteaucitron.js') }}"></script>
+		<script>
+			tarteaucitron.init({
+"privacyUrl": "", /* Privacy policy url */
+"bodyPosition": "bottom", /* or top to bring it as first element for accessibility */
 
-			"hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
-			"cookieName": "tarteaucitron", /* Cookie name */
+"hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
+"cookieName": "tarteaucitron", /* Cookie name */
 
-			"orientation": "middle", /* Banner position (top - bottom - middle - popup) */
+"orientation": "middle", /* Banner position (top - bottom - middle - popup) */
 
-			"groupServices": false, /* Group services by category */
-			"showDetailsOnClick": true, /* Click to expand the description */
-			"serviceDefaultState": "wait", /* Default state (true - wait - false) */
+"groupServices": false, /* Group services by category */
+"showDetailsOnClick": true, /* Click to expand the description */
+"serviceDefaultState": "wait", /* Default state (true - wait - false) */
 
-			"showAlertSmall": false, /* Show the small banner on bottom right */
-			"cookieslist": false, /* Show the cookie list */
-			
-			"showIcon": false, /* Show cookie icon to manage cookies */
-			"iconSrc": "{{ asset('img/cookie.svg') }}", /* Optional: URL or base64 encoded image */
-			"iconPosition": "BottomRight", /* Position of the icon between BottomRight, BottomLeft, TopRight and TopLeft */
+"showAlertSmall": false, /* Show the small banner on bottom right */
+"cookieslist": false, /* Show the cookie list */
 
-			"adblocker": false, /* Show a Warning if an adblocker is detected */
+"showIcon": false, /* Show cookie icon to manage cookies */
+"iconSrc": "{{ asset('img/cookie.svg') }}", /* Optional: URL or base64 encoded image */
+"iconPosition": "BottomRight", /* Position of the icon between BottomRight, BottomLeft, TopRight and TopLeft */
 
-			"DenyAllCta" : true, /* Show the deny all button */
-			"AcceptAllCta" : true, /* Show the accept all button when highPrivacy on */
-			"highPrivacy": true, /* HIGHLY RECOMMANDED Disable auto consent */
+"adblocker": false, /* Show a Warning if an adblocker is detected */
 
-			"handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
+"DenyAllCta": true, /* Show the deny all button */
+"AcceptAllCta": true, /* Show the accept all button when highPrivacy on */
+"highPrivacy": true, /* HIGHLY RECOMMANDED Disable auto consent */
 
-			"removeCredit": false, /* Remove credit link */
-			"moreInfoLink": true, /* Show more info link */
-			"useExternalCss": false, /* If false, the tarteaucitron.css file will be loaded */
-			"useExternalJs": false, /* If false, the tarteaucitron.services.js file will be loaded */
+"handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
 
-			// "cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for subdomain website */
+"removeCredit": false, /* Remove credit link */
+"moreInfoLink": true, /* Show more info link */
+"useExternalCss": false, /* If false, the tarteaucitron.css file will be loaded */
+"useExternalJs": false,
+/* If false, the tarteaucitron.services.js file will be loaded */
 
-			"readmoreLink": "", /* Change the default readmore link pointing to tarteaucitron.io */
-			
-			"mandatory": true, /* Show a message about mandatory cookies */
-			"mandatoryCta": true, /* Show the disabled accept button when mandatory on */
-			// "customCloserId": "" /* Optional a11y: Custom element ID used to open the panel */
-	});
-	</script>
-</body>
+// "cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for subdomain website */
+
+"readmoreLink": "", /* Change the default readmore link pointing to tarteaucitron.io */
+
+"mandatory": true, /* Show a message about mandatory cookies */
+"mandatoryCta": true,
+/* Show the disabled accept button when mandatory on */
+// "customCloserId": "" /* Optional a11y: Custom element ID used to open the panel */
+});
+		</script>
+	</body>
 </html>
