--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -3,77 +3,76 @@
 {% endblock %}
 
 {% block stylesheets %}
-{{ parent() }}
-<link rel="stylesheet" href="{{ asset('css/chat.css') }}">
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('css/chat.css') }}">
 {% endblock %}
 
 {% block body %}
-<div id="chat" data-user-id="{{ app.user.id }}" data-active-room-id="{{ roomId }}">
-    <h1 class="chat-title" >
-        <a href="{{ path('app_chat') }}">
-            <i class="fa-solid fa-arrow-left"></i> 
-        </a>
-            Chat >
-            {{ app.user.pseudo }}
-    </h1>
-    <div class="rooms">
-        <div class="rooms-container">
-            {% for room in rooms %}
-            <div class="room-item" data-room-id={{room.id}}>
-                {% for utilisateur in room.utilisateurs %}
-                {% if utilisateur.id != app.user.id %}
-                <div class="room-avatar">
-                    {% if utilisateur.photo is not null %}
-                    <figure>
-                        <img src="{{ vich_uploader_asset(utilisateur, 'photoFile') }}"
-                            alt="Photo de profil de {{ utilisateur.pseudo }}">
-                    </figure>
-                    {% else %}
-                    <figure>
-                        <img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil par défaut">
-                    </figure>
-                    {% endif %}
-                </div>
-                    <div class="user-info">
-                        <span class="pseudo-chat">
-                            <a href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">{{utilisateur.pseudo}}</a> :
-                        </span>
-                {% endif %}
-                {% endfor %}
-                        {# Dernier message #}
-                        <p class="last-message" id="last-message-{{room.id}}">Dernier message : {{ room.lastMessage }}</p>
-                        {# Date du dernier message #}
-                        <p class="room-date">{{ room.createdAt|format_datetime('short', 'short', locale='fr') }}</p>
-                    </div>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-    <div class="message-container">
-        {# {% if roomId is not null %} #}
-            {# Div qu'on rempli de messages a chaque envoie de message #}
-            <div id="messages"></div>
-            {# Formulaire d'envoie de message #}
-            <div class="message-form">
-                <form class="hide-form" id="send-message-form">
-                    <textarea type="text" id="message-text" placeholder="Écrivez un message..." maxlength="50000"></textarea>
-                    <button class="btn-send" type="submit">
-                        <span class="material-symbols-outlined">
-                            send
-                        </span>
-                    </button>
-                </form>
-            </div>
-        {# {% else %} #}
-            {# <div class="no-room">
-                <p>Choisissez une conversation pour commencer à discuter</p>
-            </div> #}
-        {# {% endif %} #}
-    </div>
-</div>
+	<div id="chat" data-user-id="{{ app.user.id }}" data-active-room-id="{{ roomId }}">
+		<h1 class="chat-title">
+			<a href="{{ path('app_chat') }}">
+				<i class="fa-solid fa-arrow-left"></i>
+			</a>
+			Chat >
+			{{ app.user.pseudo }}
+		</h1>
+		<div class="rooms">
+			<div class="rooms-container">
+				{% for room in rooms %}
+					<div class="room-item" data-room-id={{room.id}}>
+						{% for utilisateur in room.utilisateurs %}
+							{% if utilisateur.id != app.user.id %}
+								<div class="room-avatar">
+									{% if utilisateur.photo is not null %}
+										<figure>
+											<img src="{{ vich_uploader_asset(utilisateur, 'photoFile') }}" alt="Photo de profil de {{ utilisateur.pseudo }}">
+										</figure>
+									{% else %}
+										<figure>
+											<img src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil par défaut">
+										</figure>
+									{% endif %}
+								</div>
+								<div class="user-info">
+									<span class="pseudo-chat">
+										<a href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">{{utilisateur.pseudo}}</a>
+										:
+									</span>
+								{% endif %}
+							{% endfor %}
+							{# Dernier message #}
+							<p class="last-message" id="last-message-{{room.id}}">Dernier message :
+								{{ room.lastMessage }}</p>
+							{# Date du dernier message #}
+							<p class="room-date">{{ room.createdAt|format_datetime('short', 'short', locale='fr') }}</p>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+		<div class="message-container">
+			{# {% if roomId is not null %} #}
+			{# Div qu'on rempli de messages a chaque envoie de message #}<div id="messages"> </div>
+			{# Formulaire d'envoie de message #}
+			<div class="message-form">
+				<form class="hide-form" id="send-message-form">
+					<textarea type="text" id="message-text" placeholder="Écrivez un message..." maxlength="50000"></textarea>
+					<button class="btn-send" type="submit">
+						<span class="material-symbols-outlined">
+							send
+						</span>
+					</button>
+				</form>
+			</div>
+			{# {% else %} #}
+		{# <div class="no-room">
+		                <p>Choisissez une conversation pour commencer à discuter</p>
+		            </div> #}
+			{# {% endif %} #}
+		</div>
+	</div>
 {% endblock %}
 
 {% block javascripts %}
-<script src="{{ asset('js/chat.js') }}"></script>
+	<script src="{{ asset('js/chat.js') }}"></script>
 {% endblock %}
-
