--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,30 +1,31 @@
 {% extends 'base2.html.twig' %}
 
 {% block meta %}
-    <meta name="description" content="Réinitialisation du mot de passe">
+	<meta name="description" content="Réinitialisation du mot de passe">
 {% endblock %}
 
 {% block stylesheets %}
-    {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/security.css') }}">
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('css/security.css') }}">
 {% endblock %}
 
-{% block title %}Réinitialisation du mot de passe{% endblock %}
+{% block title %}Réinitialisation du mot de passe
+{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
-    <h1>Réinitialisez le mot de passe</h1>
+	{% for flash_error in app.flashes('reset_password_error') %}
+		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+	{% endfor %}
+	<h1>Réinitialisez le mot de passe</h1>
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Entrez votre adresse email et nous vous enverrons un lien pour réinitialiser votre mot de passe.
-            </small>
-        </div>
+	{{ form_start(requestForm) }}
+	{{ form_row(requestForm.email) }}
+	<div>
+		<small>
+			Entrez votre adresse email et nous vous enverrons un lien pour réinitialiser votre mot de passe.
+		</small>
+	</div>
 
-        <button class="btn btn-primary">Envoyer</button>
-    {{ form_end(requestForm) }}
+	<button class="btn btn-primary">Envoyer</button>
+	{{ form_end(requestForm) }}
 {% endblock %}
